// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-hJRrWL eQYRpW aje-multiselect sc-fwzISk etxnkv"
  >
    <label
      class="sc-egkSDF eRgKMR"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-ovuCP jXkAbD aje-btn sc-geXuza jnQWUQ aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      type="button"
    >
      Select an option
      <i
        aria-hidden="true"
        class="sc-khLCKb gRpvEI aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-hJRrWL eQYRpW aje-multiselect sc-fwzISk etxnkv aje-multiselect--floating"
  >
    <div
      class="sc-eUlrpB imBDzj"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-ovuCP jXkAbD aje-btn sc-geXuza jnQWUQ aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-khLCKb gRpvEI aje-icon material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-egkSDF eRgKMR"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
